@@ -1,5 +1,6 @@
 package com.hillogy.functionaljava.predefined.functional.interfaces;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.function.Consumer;
 
@@ -7,7 +8,7 @@ public class ConsumerExample {
 
     public static void main(String[] args) {
 
-        List<Integer> list = List.of(34,67,8,23,67,89,90);
+        List<Integer> list = Arrays.asList(34,67,8,23,67,89,90);
 
         Consumer<Integer> consumer = e -> System.out.println(e);
 
